tests/fail/norecordtag/norecordtag.tvpd
<?xml version='1.0' encoding='utf-8'?>
<vpd>
  <name>FILENAME</name>
  <size>16kb</size>
  <VD>01</VD>
</vpd>
